<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/blue_white_shapes_background_abstract_with_halftone_free_vector">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/dayTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dayText"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/minTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minText"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/maxTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maxText"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/descriptTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descriptionText"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/monTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monText"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/monMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/monMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/monDescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tueText"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tueMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tueMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tueDescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/wedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wedText"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/wedMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/wedMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/wedDescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/thuTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thuText"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/thuMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/thuMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/thuDescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/friTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friText"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/friMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/friMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/friDescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/satTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/satText"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/satMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/satMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/satDescript"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sunTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunText"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sunMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sunMaxTemp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/sunDescript"
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:text="TextView"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backButtonText"
            android:backgroundTint="@color/lightBlue"
            android:textColor="@color/black"/>
    </TableRow>
</TableLayout>